--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "sass": "^1.56.1",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "react-router-dom": "^6.30.0"
     }
 }
