--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "react-router-dom": "^6.30.0"
+        "react-router-dom": "^6.30.0",
+        "recharts": "^2.15.3"
     }
 }
